--- a/dynamic-bind.html
+++ b/dynamic-bind.html
@@ -35,7 +35,8 @@
 
         props: {
           type: Object,
-          value: {}
+          value: {},
+          notify: true
         }
 
       },
@@ -104,8 +105,8 @@
 
       _createValueChangeListener: function(propertyName, propertyToBindTo) {
         this.addEventListener(propertyName + '-changed', (function(evt) {
-          if(evt.detail.value === undefined) return;
-          this.set('props.' + propertyToBindTo, evt.detail.value);
+          var newValue = (typeof evt.detail === 'object' && evt.detail) ? evt.detail.value: evt.detail;
+          this.set('props.' + propertyToBindTo, newValue);
         }).bind(this));
       },
 
