fix: item-mixin not working when `useNativeCSSProperties` = true

--- a/dynamic-bind.html
+++ b/dynamic-bind.html
@@ -17,7 +17,8 @@
         @apply --dynamic-bind-container;
       }
 
-      #container > * {
+      #container > *,
+      #container > ::slotted(*) {
         @apply --dynamic-bind-item;
       }
     </style>
